--- a/app/src/main/res/layout/fragment_cart_main_pay.xml
+++ b/app/src/main/res/layout/fragment_cart_main_pay.xml
@@ -2,10 +2,14 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+
         <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,12 +36,39 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="@color/cam">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Địa chỉ nhận hàng"
+                android:textSize="18dp"/>
+            <TextView
+                android:id="@+id/tv_foodcartpayname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Tên | số điện thoại"
+                android:textSize="18dp"/>
+            <TextView
+                android:id="@+id/tv_foodcartpaylocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Địa chỉ nhận hàng"
+                android:textSize="18dp"/>
+
+
+            <View
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray" />
+
 
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_foodcartpay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -45,55 +76,123 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_height="50dp"
             android:padding="10dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Phí vận chuyển: "/>
+                android:text="Phương thức thanh toán"
+                android:textSize="18dp" />
             <TextView
+                android:id="@+id/tv_phuongthucthanhtoan"
+                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Tiền vận chuyển"/>
+                android:hint="Phương thức thanh toán"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textAlignment="viewEnd"/>
+
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chi tiết thanh toán:"
+            android:textSize="18dp"
+            android:padding="10dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Phương thức thanh toán"/>
-                <TextView
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Phương thức thanh toán"/>
+                    android:padding="10dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tổng phí vận chuyển"/>
+                    <TextView
+                        android:id="@+id/tv_foodcartpayshipsum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="tổng phí vận chuyển"
+                        android:layout_alignParentRight="true"
+                        android:textAlignment="viewEnd"/>
 
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Tổng tiền"/>
+                    android:padding="10dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tổng tiền hàng"/>
+                    <TextView
+                        android:id="@+id/tv_foodcartpayfoodsum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="tổng tiền hàng"
+                        android:layout_alignParentRight="true"
+                        android:textAlignment="viewEnd"/>
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="Thanh toán"-->
-<!--                    android:background="@color/maucam"/>-->
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tổng thanh toán"/>
+                    <TextView
+                        android:id="@+id/tv_foodcartpaysum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="tổng thanh toán"
+                        android:layout_alignParentRight="true"
+                        android:textAlignment="viewEnd"/>
+
+
+                </RelativeLayout>
+
             </LinearLayout>
 
-        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@id/tv_foodcartpaysumprice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@id/tv_foodcartpaybuy"
+                android:hint="Tổng tiền"
+                android:padding="6dp"
+                android:textColor="@color/cam"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_foodcartpaybuy"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:text="Thanh toán"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:background="@color/maucam"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
 
     </LinearLayout>
 
