--- a/app/src/main/res/layout/fragment_foodview.xml
+++ b/app/src/main/res/layout/fragment_foodview.xml
@@ -39,11 +39,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/imgstar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/star2" />
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/tv_foodcartevaluate"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đánh giá"
-                android:textSize="18dp"/>
+                android:textSize="18dp"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/imgstar"/>
+
+            <TextView
+                android:id="@+id/daban"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Đã bán"
+                android:textSize="18dp"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/tv_foodcartevaluate"/>
+            <TextView
+                android:id="@+id/tvfood_countselled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Số lượng"
+                android:textSize="18dp"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/daban"/>
 
             <ImageView
                 android:id="@+id/img_foodcartheart"
@@ -54,27 +80,6 @@
                 android:backgroundTint="@color/custom_color_buttom"/>
         </RelativeLayout>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Số lượng đã bán"
-                android:textSize="20dp" />
-            <TextView
-                android:id="@+id/tvfood_countselled"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Số lượng"
-                android:textSize="20dp"
-                android:layout_marginLeft="10dp"/>
-
-
-        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
