--- a/app/src/main/res/layout/fragment_foodview_restaurant.xml
+++ b/app/src/main/res/layout/fragment_foodview_restaurant.xml
@@ -39,11 +39,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp">
+            <ImageView
+                android:id="@+id/imgstar1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/star2" />
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/tv_foodresevaluate"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đánh giá"
-                android:textSize="18dp"/>
+                android:textSize="18dp"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/imgstar1"/>
+
+            <TextView
+                android:id="@+id/tvfoodres_countselled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Số lượng"
+                android:textSize="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/tv_foodresevaluate"/>
 
             <ImageView
                 android:id="@+id/img_foodresheart"
@@ -55,26 +72,6 @@
         </RelativeLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Số lượng đã bán"
-                android:textSize="20dp" />
-            <TextView
-                android:id="@+id/tvfoodres_count"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Số lượng"
-                android:textSize="20dp"
-                android:layout_marginLeft="10dp"/>
-
-
-        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
