--- a/app/src/main/res/layout/fragment_profile_infomations.xml
+++ b/app/src/main/res/layout/fragment_profile_infomations.xml
@@ -5,19 +5,29 @@
     android:stretchColumns="1">
 
 
-    <TableRow
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/maucam">
         <ImageView
             android:id="@+id/imgprofileinfo_back"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:src="@drawable/baseline_arrow_back_ios_24"
             android:layout_marginTop="10dp"
             android:layout_gravity="left"
             android:padding="10dp"/>
-    </TableRow>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Thông tin cá nhân"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:gravity="center"
+            android:textColor="@color/white"/>
+    </LinearLayout>
 
     <TableRow
         android:layout_width="match_parent"
@@ -31,7 +41,7 @@
         <TextView
             android:id="@+id/tvprofileinfo_name"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
+            android:textAlignment="viewEnd"
             android:hint="Họ và tên"
             android:padding = "15dp"
             android:textSize="16dp"/>
@@ -48,7 +58,7 @@
         <TextView
             android:id="@+id/tvprofileinfo_phone"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
+            android:textAlignment="viewEnd"
             android:hint="Số điện thoại"
             android:inputType="phone"
             android:padding = "15dp"
@@ -66,7 +76,7 @@
         <TextView
             android:id="@+id/tvprofileinfo_email"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
+            android:textAlignment="viewEnd"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:padding = "15dp"
@@ -84,10 +94,10 @@
         <TextView
             android:id="@+id/tvprofileinfo_sex"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
             android:hint="Giới tính"
             android:padding = "15dp"
-            android:textSize="16dp"/>
+            android:textSize="16dp"
+            android:textAlignment="viewEnd"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -101,7 +111,7 @@
         <TextView
             android:id="@+id/tvprofileinfo_date"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
+            android:textAlignment="viewEnd"
             android:hint="Ngày sinh"
             android:padding = "15dp"
             android:inputType="date"
