--- a/app/src/main/res/layout/fragment_profile_infomations_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_infomations_edit.xml
@@ -5,19 +5,29 @@
     android:stretchColumns="1">
 
 
-    <TableRow
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/maucam">
         <ImageView
             android:id="@+id/imgprofileinfoedit_back"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:src="@drawable/baseline_arrow_back_ios_24"
             android:layout_marginTop="10dp"
             android:layout_gravity="left"
             android:padding="10dp"/>
-    </TableRow>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cập nhật thông tin cá nhân"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:gravity="center"
+            android:textColor="@color/white"/>
+    </LinearLayout>
 
     <TableRow
         android:layout_width="match_parent"
@@ -31,11 +41,11 @@
         <EditText
             android:id="@+id/edtprofileinfo_name"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
             android:hint="Họ và tên"
             android:padding = "15dp"
             android:textSize="16dp"
-            android:background="@null"/>
+            android:background="@null"
+            android:textAlignment="viewEnd"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -49,12 +59,12 @@
         <EditText
             android:id="@+id/edtprofileinfo_phone"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
             android:hint="Số điện thoại"
             android:inputType="phone"
             android:padding = "15dp"
             android:textSize="16dp"
-            android:background="@null"/>
+            android:background="@null"
+            android:textAlignment="viewEnd"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -68,12 +78,12 @@
         <EditText
             android:id="@+id/edtprofileinfo_email"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:padding = "15dp"
             android:textSize="16dp"
-            android:background="@null"/>
+            android:background="@null"
+            android:textAlignment="viewEnd"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -87,7 +97,7 @@
         <EditText
             android:id="@+id/edtprofileinfo_gender"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
+            android:textAlignment="viewEnd"
             android:hint="Giới tính"
             android:padding = "15dp"
             android:textSize="16dp"
@@ -105,7 +115,7 @@
         <EditText
             android:id="@+id/edtprofileinfo_date"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
+            android:textAlignment="viewEnd"
             android:hint="Ngày sinh"
             android:padding = "15dp"
             android:inputType="date"
@@ -122,7 +132,7 @@
             android:id="@+id/btsaveupdate_info"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text ="Lưu Chỉnh sửa"
+            android:text ="Cập nhật thông tin"
             android:textSize="16dp"
             android:textColor="@color/white"
             android:backgroundTint="@color/maucam"/>
