--- a/app/src/main/res/layout/fragment_progile_centersupport.xml
+++ b/app/src/main/res/layout/fragment_progile_centersupport.xml
@@ -1,30 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/maucam">
+        android:background="@color/maucam"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="-41dp">
+
         <ImageView
             android:id="@+id/imgcentersp_back"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:src="@drawable/baseline_arrow_back_ios_24"
-            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:padding="10dp"/>
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:src="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Trung tâm hỗ trợ"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:padding="10dp"
             android:gravity="center"
-            android:textColor="@color/white"/>
+            android:padding="10dp"
+            android:text="Trung tâm hỗ trợ"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold" />
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_chatcenter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/fab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.02" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_add"
+        android:layout_gravity="bottom|end"
+        app:elevation="6dp"
+        android:onClick="newChatTapped"
+        app:pressedTranslationZ="12dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
