--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/fragmentHome"
         android:icon="@drawable/home"
         android:title="@string/title_home" />
     <item
-        android:id="@+id/navigation_cart"
+        android:id="@+id/fragmentCart"
         android:icon="@drawable/shopping_cart"
         android:title="@string/title_cart"/>
     <item
-        android:id="@+id/navigation_favorite"
+        android:id="@+id/fragmentFavorite"
         android:icon="@drawable/heart"
         android:title="@string/title_favorite"/>
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/fragmentNotification"
         android:icon="@drawable/notification"
         android:title="@string/title_notifications"/>
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/fragmentProfile"
         android:icon="@drawable/user"
         android:title="@string/title_profile"/>
 
