--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-
+    android:layout_height="wrap_content"
+    android:gravity="end"
+    android:orientation="vertical"
+    android:padding="5dp">
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/chatdrawble"
         android:backgroundTint="#2A05F3"
         android:layout_alignParentEnd="true"
-        android:padding="10dp">
+        android:padding="5dp">
         <TextView
             android:id="@+id/chatsend"
             android:layout_width="wrap_content"
@@ -21,5 +22,10 @@
     </RelativeLayout>
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="hh/mm/yy"
+        android:layout_marginRight="10dp"/>
 
-</RelativeLayout>
+</LinearLayout>
