--- a/app/src/main/res/layout/fragment_profile_centresupport_admin_mesrev.xml
+++ b/app/src/main/res/layout/fragment_profile_centresupport_admin_mesrev.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             android:background="@color/maucam">
             <ImageView
-                android:id="@+id/imgcenterspadmin_back"
+                android:id="@+id/imgcentrespadminmesrev_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
@@ -25,14 +25,15 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Trang chủ hỗ trợ"
+                android:text="Tin nhắn đã nhận"
                 android:textColor="@color/white"
                 android:textSize="20dp"
                 android:textStyle="bold" />
         </LinearLayout>
 
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_centerspadmin"
+            android:id="@+id/rcv_centerspadminmesrev"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"/>
