--- a/app/src/main/res/layout/fragment_profile_centresupport.xml
+++ b/app/src/main/res/layout/fragment_profile_centresupport.xml
@@ -11,9 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/maucam"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="-41dp">
 
         <ImageView
@@ -40,11 +38,11 @@
         android:id="@+id/rcv_chatcenter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.02"
-        android:padding="10dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imgaddmes"
