--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/fragmentHome"
         android:icon="@drawable/home"
@@ -7,7 +8,8 @@
     <item
         android:id="@+id/fragmentCart"
         android:icon="@drawable/shopping_cart"
-        android:title="@string/title_cart"/>
+        android:title="@string/title_cart"
+        app:actionViewClass="android.widget.TextView"/>
     <item
         android:id="@+id/fragmentFavorite"
         android:icon="@drawable/heart"
